php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #32021 Crash caused by range('', 'z')
Submitted: 2005-02-18 14:06 UTC Modified: 2005-02-18 14:41 UTC
From: mueller_rainer at gmx dot de Assigned: derick (profile)
Status: Closed Package: Reproducible crash
PHP Version: 5.0.3 OS:
Private report: No CVE-ID: None
 [2005-02-18 14:06 UTC] mueller_rainer at gmx dot de
Description:
------------
If you use '' as the first parameter and a non-empty string as second parameter for range() PHP crashes/produces a segfault.

Tested on Windows with 5.0.3 and also on Linux with CVS Snapshot PHP 5.0.4-dev.

Reproduce code:
---------------
$foo = range('', 'z');

Expected result:
----------------
range() should return an empty array.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-02-18 14:41 UTC] derick@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC