- Fixed bug #32021: Crash caused by range('', 'z')