ext/standard/tests/array/bug32021.phpt
@@ -1,0 +1,14 @@
+--TEST--
+Bug #32021 (Crash caused by range('', 'z'))
+--FILE--
+<?php
+$foo = range('', 'z');
+var_dump($foo);
+?>
+ALIVE
+--EXPECT--
+array(1) {
+  [0]=>
+  int(0)
+}
+ALIVE
